# qml-template

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/qmlApp/: CMakeLists.txt  main.cpp
src/qmlApp/app/: Main.qml
src/qmlApp/widgets/: Hello.qml  SimpleIcon.qml
src/uiLib/: CMakeLists.txt
src/uiLib/widgets/: SimpleIcon.qml
